# MLensify

./: README.md  pyproject.toml
MLensify/: __init__.py  __main__.py  core.py
Microlensify/: core.py
Microlensify_Input_Examples/: OGLE_filelist.txt  README.md  urls_file.txt
Project_codes/Data/Model_Prediction_Results/: prediction_QLP_sec33_cleaned_final.txt  prediction_eleanor_sec12_cleaned_final.txt  prediction_tessspoc_cleaned_sec12_final.txt
input_examples/: README.md
input_examples/OGLE/: OGLE-2016-BLG-0094.txt  OGLE-2016-BLG-0206.txt
