[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tess-mlens"
version = "1.3.0"
description = "TESS Microlensing Detection with Deep Learning – Atousa Kalantari"
authors = [{ name = "Atousa Kalantari", email = "atousakalantari99@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

# No automatic dependencies
dependencies = []

[project.optional-dependencies]
core = ["numpy>=1.21", "pandas", "astropy", "joblib", "tqdm"]
ml = ["tensorflow>=2.15", "scikit-learn"]
full = ["tess-mlens[core]", "tess-mlens[ml]"]

[project.scripts]
tess-mlens = "tessmlens.__main__:main"

[project.urls]
Homepage = "https://github.com/Atousa-Kalantari/TESS-MLens"
Repository = "https://github.com/Atousa-Kalantari/TESS-MLens"

# ──────────────────────────────
# THIS IS THE ONLY CORRECT WAY IN 2025
# ──────────────────────────────
[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"tessmlens" = [
    "assets/*",
    "assets/*.*"          # makes sure .keras and .pkl are included
]

# Extra safety — explicitly include everything in assets folder
[tool.setuptools.data-files]
"assets" = ["tessmlens/assets/*"]
