[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MLensify"
version = "1.0.0"
description = "Microlensing Single Lens Classification – Atousa Kalantari & Somayeh Khakpash"
authors = [{ name = "Atousa Kalantari", email = "atousakalantari99@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
core = ["numpy>=1.21", "pandas", "astropy", "joblib", "tqdm"]
ml = ["tensorflow>=2.15", "scikit-learn"]
full = ["MLensify[core]", "MLensify[ml]"]


[project.scripts]
MLensify = "MLensify.__main__:main"      # ← changed from tess-mlens → MLensify

[project.urls]
Homepage = "https://github.com/Atousa-Kalantari/MLensify"
Repository = "https://github.com/Atousa-Kalantari/MLensify"

# Packaging
[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"MLensify" = ["assets/*", "assets/*.*"]


[tool.setuptools.data-files]
"MLensify/assets" = ["MLensify/assets/*"]
